# eth-uniswap-prelim-analysis

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  chart_data.ipynb  config.yaml  data_collection.ipynb  graphql_helper.py  poolDayDatas.json  pwlf_helper.py  pyproject.toml  subgraph_query_examples.ipynb  topPoolDatas.json
analysis/: 0-ArbTxAnalysis.ipynb  1-DataCollection.ipynb  2-Analysis.ipynb  2-TokenVolumeAnalysis.ipynb  2-VolumeAnalysis.ipynb  3-PoolVolumeAnalysis.ipynb  3-TvlRegression.ipynb  4-PoolTvlRegression.ipynb  chart_data.ipynb
analysis/arb_tx_data/0xe976f2ebd70135153e8522c3aaa3c9d489717ef621d69b9e00a9f215d0474918/: log.txt
cookbook/: data_collection.ipynb  subgraph_examples.ipynb  subgraph_query_examples.ipynb  vertex_degrees.ipynb
pyammanalysis/: __init__.py  config.py  graphql_helper.py  pwlf_helper.py  subgraph.py  util.py
pyammanalysis/amm_arb/: __init__.py  base_scraper.py  graph_arbitrage.py  uniswapv2_scraper.py  uniswapv3_scraper.py
