[tool.poetry]
name = "eth-uniswap-prelim-analysis"
version = "0.1.0"
description = "Preliminary data analysis on Uniswap V3 on Ethereum"
authors = ["StardustLID <60168779+StardustLID@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.4"
pandas = "^1.4.2"
requests = "^2.28.0"
pwlf = "^2.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
