[tool.isort]
profile = "black"
known_first_party = "poetry"

[tool.poetry]
name = "eth-uniswap-prelim-analysis"
version = "0.1.0"
description = "Preliminary data analysis on Uniswap V3 on Ethereum"
authors = ["StardustLID <60168779+StardustLID@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.4"
pandas = "^1.4.2"
requests = "^2.28.0"
pwlf = "^2.2.1"
gql = {extras = ["aiohttp"], version = "^3.3.0"}
jupyter = "^1.0.0"
ipykernel = "^6.14.0"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {extras = ["jupyter"], version = "^22.3.0"}
pre-commit = "^2.19.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
